@@ -1,3 +1,5 @@
+- fixed texture problem with old hardware (2022/03/02 MS)
+
 1.0.8:
 - fixed instant set selection in custom set dialog (2021/08/08 MS) 
 - added paddle acceleration for keys/gamepad (2021/08/08 MS)
